refactor html, css and routes

--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -1,8 +1,8 @@
 <h3>Top Cats</h3>
 <div class="grid grid-pad">
-	<div *ngFor="let cat of cats" class="col-1-4">
+	<a *ngFor="let cat of cats" [routerLink]="['/detail', cat.id]" class="col-1-4">
 		<div class="module cat">
 			<h4>{{cat.name}}</h4>
 		</div>
-	</div>
+	</a>
 </div>
