added cats creation, deletion and update

--- a/src/app/cat-detail.component.html
+++ b/src/app/cat-detail.component.html
@@ -12,4 +12,5 @@
 		<input [(ngModel)]="cat.breed" placeholder="breed">
 	</div>
 	<button (click)="goBack()">Back</button>
+	<button (click)="save()">Save</button>
 </div>
